# smt

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  smt.ncb  smt.sln
include/: defs.h  smt.h  smt_defs.h  smt_user_defs.h
sample/hello_world/: CMakeLists.txt  README.md  helloworld.c  helloworld.h  smt_user_defs.c
sample/microwave/: README.md
sample/microwave/app/: CMakeLists.txt  mw_machine_demo.c
sample/microwave/statemachine/: CMakeLists.txt
sample/microwave/statemachine/include/: mw_context.h  mw_machine.h  mw_machine_door_closed.h  mw_machine_heating.h
sample/microwave/statemachine/src/: mw_machine.c  mw_machine_door_closed.c  mw_machine_heating.c  smt_user_defs.c
smt/: defs.h  smt.h
smt_demo/: smt_demo.vcproj  smtdemo.c
smt_hl/: smt_hl.c  smt_hl.h  smt_hl.vcproj
src/: smt.c  smt.vcproj  smt_defs.h  smt_user_defs.h  smtdemo.c
